# ag-starter

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/rules/: architecture.md  code-style.md  testing.md
agent-backend/: Dockerfile  pyproject.toml
agent-backend/app/: agent.py  config.py  llm.py  main.py  mock_data.py  tools.py
agent_docs/: dependency-map.md  domain-glossary.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/agent/: page.tsx
frontend/src/components/agent/: agent-actions.tsx  agent-chat.tsx  agent-state-display.tsx  results-panel.tsx
frontend/src/components/agent/renders/: channel-breakdown-render.tsx  sla-compliance-render.tsx  transaction-summary-render.tsx
frontend/src/components/dashboard/: category-chart.tsx  header-bar.tsx  kpi-cards.tsx  sidebar-nav.tsx
frontend/src/components/ui/: badge.tsx  chart.tsx
frontend/src/contexts/: tool-results-context.tsx
frontend/src/lib/: mock-data.ts  utils.ts
