[project]
name = "ag-starter-agent"
version = "0.1.0"
description = "FinOps Assistant - LangGraph agent with AG-UI protocol"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0,<0.3.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    "copilotkit>=0.1.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
